force-app/main/default/objects/Job_Profile__c/Job_Profile__c.object-meta.xml
<CustomObject>
    <description>The Job Profile object contains information on positions currently needed within the organization.</description>
    <label>Job Profile</label>
    <nameField>
        <label>Job Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>