force-app/main/default/objects/Job_Profile__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Non-Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>