force-app/main/default/objects/Job_Profile__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <label>Experience Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry-level</fullName>
            </value>
            <value>
                <fullName>Mid-level</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>