force-app/main/default/objects/Job_Profile__c/fields/Job_Profile_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Profile_Number__c</fullName>
    <displayFormat>JP-{0000}</displayFormat>
    <label>Job Profile Number</label>
    <type>AutoNumber</type>
</CustomField>