force-app/main/default/objects/Job_Profile__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <label>Salary Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>