force-app/main/default/objects/Job_Profile__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>HTML/CSS</fullName>
            </value>
            <value>
                <fullName>Salesforce Development</fullName>
            </value>
            <value>
                <fullName>Data Analysis</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>AWS Certification</fullName>
            </value>
            <value>
                <fullName>Network Security</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Team Collaboration</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Problem Solving</fullName>
            </value>
            <value>
                <fullName>Time Management</fullName>
            </value>
            <value>
                <fullName>Adaptability</fullName>
            </value>
            <value>
                <fullName>Creativity</fullName>
            </value>
            <value>
                <fullName>Critical Thinking</fullName>
            </value>
            <value>
                <fullName>Project Management (for Project Manager roles)</fullName>
            </value>
            <value>
                <fullName>Patient Care (for Healthcare roles)</fullName>
            </value>
            <value>
                <fullName>Financial Modeling (for Finance roles)</fullName>
            </value>
            <value>
                <fullName>Marketing Strategy (for Marketing roles)</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Management (for Sales roles)</fullName>
            </value>
            <value>
                <fullName>PMP (Project Management Professional)</fullName>
            </value>
            <value>
                <fullName>Certified ScrumMaster</fullName>
            </value>
            <value>
                <fullName>AWS Certified Solutions Architect</fullName>
            </value>
            <value>
                <fullName>Google Analytics Certification</fullName>
            </value>
            <value>
                <fullName>Microsoft Certified: Azure Administrator Associate</fullName>
            </value>
            <value>
                <fullName>Certified Data Scientist</fullName>
            </value>
            <value>
                <fullName>Salesforc Certifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>