force-app/main/default/objects/Job_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Profile_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Positions__c</columns>
    <columns>Experience_Level__c</columns>
    <columns>Location__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Salary_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>